feat(thumbnail): implemnt thumbnail video (#9)
